// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index mapper successfully resolves the document from did 1`] = `
Object {
  "didDocument": Object {
    "@context": "https://w3id.org/did/v1",
    "assertionMethod": Array [
      "did:key:zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz#zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz",
    ],
    "authentication": Array [
      "did:key:zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz#zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz",
    ],
    "capabilityDelegation": Array [
      "did:key:zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz#zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz",
    ],
    "capabilityInvocation": Array [
      "did:key:zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz#zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz",
    ],
    "id": "did:key:zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz",
    "verificationMethod": Array [
      Object {
        "controller": "did:key:zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz",
        "id": "did:key:zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz#zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz",
        "publicKeyBase58": "qjdSRUCiVtAjwdYVTxHQXd9FnMPRaYCtKpkchofTw66G",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "didDocumentMetadata": Object {},
  "didResolutionMetadata": Object {
    "contentType": "application/did+ld+json",
  },
}
`;

exports[`Index mapper successfully resolves the document from did 2`] = `
Object {
  "didDocument": Object {
    "assertionMethod": Array [
      "did:key:zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz#zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz",
    ],
    "authentication": Array [
      "did:key:zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz#zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz",
    ],
    "capabilityDelegation": Array [
      "did:key:zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz#zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz",
    ],
    "capabilityInvocation": Array [
      "did:key:zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz#zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz",
    ],
    "id": "did:key:zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz",
    "verificationMethod": Array [
      Object {
        "controller": "did:key:zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz",
        "id": "did:key:zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz#zQ3shbgnTGcgBpXPdBjDur3ATMDWhS7aPs6FRFkWR19Lb9Zwz",
        "publicKeyBase58": "qjdSRUCiVtAjwdYVTxHQXd9FnMPRaYCtKpkchofTw66G",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "didDocumentMetadata": Object {},
  "didResolutionMetadata": Object {
    "contentType": "application/did+json",
  },
}
`;

exports[`Index mapper successfully resolves the document from did 3`] = `
Object {
  "didDocument": Object {
    "@context": "https://w3id.org/did/v1",
    "assertionMethod": Array [
      "did:key:z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8#z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8",
    ],
    "authentication": Array [
      "did:key:z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8#z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8",
    ],
    "capabilityDelegation": Array [
      "did:key:z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8#z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8",
    ],
    "capabilityInvocation": Array [
      "did:key:z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8#z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8",
    ],
    "id": "did:key:z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8",
    "keyAgreement": Array [
      Object {
        "controller": "did:key:z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8",
        "id": "did:key:z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8#z6LSnkZe3JZPCo88XsdQVJi8j1TomzX2yRW7ZnvvWhmrSdmG",
        "publicKeyBase58": "C5PUWzkX7LQPSVFdxfCBQRFKvqyvGpKxgpDF2F8KjFzW",
        "type": "X25519KeyAgreementKey2019",
      },
    ],
    "verificationMethod": Array [
      Object {
        "controller": "did:key:z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8",
        "id": "did:key:z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8#z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8",
        "publicKeyBase58": "FUaAP6i2XyyouPds73QneYgZJ86qhua2jaZYBqJSwKok",
        "type": "Ed25519VerificationKey2018",
      },
    ],
  },
  "didDocumentMetadata": Object {},
  "didResolutionMetadata": Object {
    "contentType": "application/did+ld+json",
  },
}
`;

exports[`Index mapper successfully resolves the document from did 4`] = `
Object {
  "didDocument": Object {
    "assertionMethod": Array [
      "did:key:z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8#z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8",
    ],
    "authentication": Array [
      "did:key:z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8#z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8",
    ],
    "capabilityDelegation": Array [
      "did:key:z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8#z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8",
    ],
    "capabilityInvocation": Array [
      "did:key:z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8#z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8",
    ],
    "id": "did:key:z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8",
    "keyAgreement": Array [
      Object {
        "controller": "did:key:z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8",
        "id": "did:key:z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8#z6LSnkZe3JZPCo88XsdQVJi8j1TomzX2yRW7ZnvvWhmrSdmG",
        "publicKeyBase58": "C5PUWzkX7LQPSVFdxfCBQRFKvqyvGpKxgpDF2F8KjFzW",
        "type": "X25519KeyAgreementKey2019",
      },
    ],
    "verificationMethod": Array [
      Object {
        "controller": "did:key:z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8",
        "id": "did:key:z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8#z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8",
        "publicKeyBase58": "FUaAP6i2XyyouPds73QneYgZJ86qhua2jaZYBqJSwKok",
        "type": "Ed25519VerificationKey2018",
      },
    ],
  },
  "didDocumentMetadata": Object {},
  "didResolutionMetadata": Object {
    "contentType": "application/did+json",
  },
}
`;
